--- a/.github/workflows/phpunit.yml
+++ b/.github/workflows/phpunit.yml
@@ -7,16 +7,16 @@ on:
     paths:
       - '**.php'
       - 'composer.**'
-      - 'phpstan*'
-      - '.github/workflows/test.yml'
+      - 'phpunit*'
+      - '.github/workflows/phpunit.yml'
   push:
     branches:
       - develop
     paths:
       - '**.php'
       - 'composer.**'
-      - 'phpstan*'
-      - '.github/workflows/test.yml'
+      - 'phpunit*'
+      - '.github/workflows/phpunit.yml'
 
 jobs:
   main:
@@ -35,7 +35,7 @@ jobs:
         uses: shivammathur/setup-php@v2
         with:
           php-version: ${{ matrix.php-versions }}
-          tools: phive, phpunit
+          tools: composer, phive, phpunit
           extensions: intl, json, mbstring, gd, xdebug, xml, sqlite3
           coverage: xdebug
         env:
