--- a/.github/workflows/unused.yml
+++ b/.github/workflows/unused.yml
@@ -1,27 +1,27 @@
-# When a PR is opened or a push is made, check code
-# for unused packages with Composer Unused.
 name: Unused
 
 on:
   pull_request:
     branches:
-      - 'develop'
+      - develop
     paths:
-      - 'src/**'
-      - 'tests/**'
+      - '**.php'
+      - 'composer.**'
       - '.github/workflows/unused.yml'
   push:
     branches:
-      - 'develop'
+      - develop
     paths:
-      - 'src/**'
-      - 'tests/**'
+      - '**.php'
+      - 'composer.**'
       - '.github/workflows/unused.yml'
 
 jobs:
   build:
     name: Unused Package Detection
     runs-on: ubuntu-latest
+    if: "!contains(github.event.head_commit.message, '[ci skip]')"
+
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -32,6 +32,7 @@ jobs:
           php-version: '8.0'
           tools: composer, composer-unused
           extensions: intl, json, mbstring, xml
+          coverage: none
         env:
           COMPOSER_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
@@ -43,18 +44,27 @@ jobs:
         uses: actions/cache@v2
         with:
           path: ${{ steps.composer-cache.outputs.dir }}
-          key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.json') }}
+          key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.json') }}-${{ hashFiles('**/composer.lock') }}
           restore-keys: ${{ runner.os }}-composer-
 
-      - name: Install dependencies (limited)
-        if: ${{ github.event_name == 'pull_request' && github.event.pull_request.head.repo.full_name != github.event.pull_request.base.repo.full_name }}
-        run: composer update --no-progress --no-interaction --prefer-dist --optimize-autoloader
+      - name: Create PHPStan cache directory
+        run: mkdir -p build/phpstan
 
-      - name: Install dependencies (authenticated)
-        if: ${{ github.event_name != 'pull_request' || github.event.pull_request.head.repo.full_name == github.event.pull_request.base.repo.full_name }}
-        run: composer update --no-progress --no-interaction --prefer-dist --optimize-autoloader
-        env:
-          COMPOSER_AUTH: ${{ secrets.COMPOSER_AUTH }}
+      - name: Cache PHPStan results
+        uses: actions/cache@v2
+        with:
+          path: build/phpstan
+          key: ${{ runner.os }}-phpstan-${{ github.sha }}
+          restore-keys: ${{ runner.os }}-phpstan-
+
+      - name: Install dependencies
+        run: |
+          composer -q config -g github-oauth.github.com "${{ secrets.GITHUB_TOKEN }}"
+          if [ -f composer.lock ]; then
+            composer install --no-progress --no-interaction --prefer-dist --optimize-autoloader
+          else
+            composer update --no-progress --no-interaction --prefer-dist --optimize-autoloader
+          fi
 
       - name: Detect unused packages
         run: composer-unused -vvv --profile --ansi --no-interaction --no-progress --excludePackage=php
