--- a/.github/workflows/rector.yml
+++ b/.github/workflows/rector.yml
@@ -36,7 +36,7 @@ jobs:
         uses: shivammathur/setup-php@v2
         with:
           php-version: ${{ matrix.php-versions }}
-          tools: phive
+          tools: phpstan
           extensions: intl, json, mbstring, xml
           coverage: none
         env:
