--- a/composer.json
+++ b/composer.json
@@ -19,13 +19,21 @@
         }
     ],
     "require": {
-        "php": "^7.3 || ^8.0",
+        "php": "^7.4 || ^8.0",
         "codeigniter4/settings": "^2.1"
     },
     "require-dev": {
-        "codeigniter4/codeigniter4": "dev-develop",
+        "codeigniter4/framework": "^4.1",
         "tatter/imposter": "^1.0",
-        "tatter/tools": "^1.15"
+        "tatter/tools": "^2.0"
+    },
+    "suggest": {
+        "codeigniter4/authentication-implementation": "Required to enable database persistence."
+    },
+    "config": {
+        "allow-plugins": {
+            "phpstan/extension-installer": true
+        }
     },
     "autoload": {
         "psr-4": {
@@ -40,15 +48,6 @@
             "Tests\\Support\\": "tests/_support"
         }
     },
-    "repositories": [
-        {
-            "type": "vcs",
-            "url": "https://github.com/codeigniter4/codeigniter4"
-        }
-    ],
-    "suggest": {
-        "codeigniter4/authentication-implementation": "Required to enable database persistence."
-    },
     "minimum-stability": "dev",
     "prefer-stable": true,
     "scripts": {
@@ -59,11 +58,13 @@
             "@analyze",
             "@test",
             "@inspect",
+            "rector process",
             "@style"
         ],
         "deduplicate": "phpcpd app/ src/",
         "inspect": "deptrac analyze --cache-file=build/deptrac.cache",
         "mutate": "infection --threads=2 --skip-initial-tests --coverage=build/phpunit",
+        "retool": "retool",
         "style": "php-cs-fixer fix --verbose --ansi --using-cache=no",
         "test": "phpunit"
     }
